--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
     "firebase": "^12.8.0",
     "next": "^16.1.2",
     "react": "^19.2.3",
