--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "csv": "bun run ./scripts/csv-to-json.ts"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
@@ -17,10 +18,12 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.16",
+    "@types/bun": "^1.3.6",
     "@types/node": "^24.10.1",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.0",
     "autoprefixer": "10.4.22",
+    "bun": "^1.3.6",
     "eslint": "^9.39.2",
     "eslint-config-next": "^15.5.6",
     "postcss": "^8.5.6",
