--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.2.9",
     "firebase": "^12.8.0",
     "next": "^16.1.2",
+    "next-intl": "^4.7.0",
     "react": "^19.2.3",
     "react-dom": "19.2.0"
   },
