--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
+    "@react-email/components": "^1.0.6",
+    "@react-email/render": "^2.0.4",
     "firebase": "^12.8.0",
+    "firebase-admin": "^13.6.0",
     "next": "^16.1.2",
     "next-intl": "^4.7.0",
     "react": "^19.2.3",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "resend": "^6.8.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.16",
